- SF patch #1556950 for SF bug #1556947 NPE when no user selected to del/edit
- SF patch #1561292 for SF bug #1554064
- SF patch #1563523 for SF bug #1548865 Browse errors on withdrawn item
- SF patch #1556207 for SF bug #1554056 Community/collection handle URL with / redirects to homepage
- SF patch #1571494  for SF bug  #1571490 - UTF-8 encoded characters in licence

(Mark Diggory)
- SF patch #1523824 robots.txt to limit bots navigating author and date pages
- SF patch #1547987 Small Messages.properties modification (change of DSpace copyright text)
- SF patch #1542830 Patch to limit Referer Spam capabilities

(Tim Donohue)
- SF patch #1550606  more configurable RSS feeds, also moves text to Messages.properties
- SF patch #1544829  fixes SF bug #1544807 Browse-by-Subject/Author paging mechanism broken
- SF patch #1543969  fixes SF bug #1543966 "Special" groups inside groups bug
- SF patch #1550161  Fix HttpServletRequest encoding issues in 1.4
- SF patch #1562284  System-wide RSS Feed
- Fixed bug #1480496 Cannot turn off "ignore authorization" flag!

(Jonathan Champ)
- SF patch #1544089 fixes SF bug #1515148 community policies not deleting correctly

1.4 final
=========

(Scott Yeadon)
- Fixed typo in 13-14 upgrade docs and checksum checker sql, and removed tasklist sql

(Claudia Juergen)
- SF patch #1514965 fixes SF bug #1505422. fix typo in SQL for item mapper
- SF patch #1516988  Deleting owner of mapped items SF bug #1196724
- SF patch #1517488  Access Bitstreams in Withdrawn Items SF bug #1408373
- SF patch #1490980  Fix for SF bugs #1456311, #1221954  Communities and Collections without name
- included some missing i18n tags
- SF patch #1490891  Submission Step 1 not authorized note and navigation back
- SF patch #1556316  for SF bugs #1552807, #1333269 and general deletion of Collection
- SF patch #1554669 Oracle fixes for Browse.java
- SF patch #1561292 for SF bug #1554064

(Richard Jones)